--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "pysonet"
-version = "0.1.0"
+name = "Scheblanov_AIS_LAB"
+version = "1.0"
 description = "Social network by Django"
-authors = ["DJWOMS <socanime@gmail.com>"]
+authors = ["ALex Scheblanov sashizo59@gmail.com"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
